<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activitys.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtEmail"
            android:layout_marginTop="100dp"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edit_email"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@drawable/background_edit_text_login"
            android:hint="@string/hintEmail"
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txt_senha"
            app:layout_constraintTop_toBottomOf="@+id/txt_email" />

        <TextView
            android:id="@+id/txt_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSenha"
            android:textSize="20sp"
            android:layout_marginTop="60dp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/edit_senha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edit_senha"
            app:layout_constraintTop_toBottomOf="@+id/edit_email" />

        <EditText
            android:id="@+id/edit_senha"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@drawable/background_edit_text_login"
            android:hint="@string/hintSenha"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/txt_senha" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/background_btn_login"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_senha" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textStyle="bold|italic"
            android:text="@string/cadastro"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>